--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mantine/hooks": "^7.8.1",
     "@tabler/icons-react": "^3.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
